[package]
name = "rustls-pki-types"
version = "1.3.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "Shared types for the rustls PKI ecosystem"
documentation = "https://docs.rs/rustls-pki-types"
homepage = "https://github.com/rustls/pki-types"
repository = "https://github.com/rustls/pki-types"
categories = ["network-programming", "data-structures", "cryptography"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
wasm-bindgen = ["time/wasm-bindgen"]

[dependencies]
time = { version = "0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
