[package]
name = "rustls-pki-types"
version = "1.7.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "Shared types for the rustls PKI ecosystem"
documentation = "https://docs.rs/rustls-pki-types"
homepage = "https://github.com/rustls/pki-types"
repository = "https://github.com/rustls/pki-types"
categories = ["network-programming", "data-structures", "cryptography"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
web = ["web-time"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-time = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
