[package]
name = "rustls-pki-types-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rustls-pki-types]
path = ".."
features = ["std"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "private_key"
path = "fuzz_targets/private_key.rs"
test = false
doc = false

[[bin]]
name = "pem"
path = "fuzz_targets/pem.rs"
test = false
doc = false
